--- a/my-app/public/style.css
+++ b/my-app/public/style.css
@@ -130,6 +130,7 @@ body{
 .Navbar-ProductsAndService a{
     padding: 5px 10px;
     font-size: 14px;
+    background-color: var(--Orange);
 }
 .Navbar-ProductsAndService a:hover{
     transition: 0.5s;
@@ -199,6 +200,7 @@ body{
 }
 .OurPropose-container{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
 }
@@ -232,6 +234,7 @@ body{
     font-weight: 300;
     margin: 20px 40px;
     width: 280px;
+    height: 175px;
 }
 .OurPropose-container-box-button{
     font-size: 16px;
@@ -448,6 +451,18 @@ body{
 #MarketMain{
     display: flex;
     flex-direction: column;
+}
+.MarketMain-filter-button{
+    margin: 0 5px;
+}
+
+.MarketMain-filter-button_active{
+    border: 1px solid var(--black);
+    border-radius: 100px;
+    padding: 10px;
+}
+.MarketMain-filter-button:hover{
+    color: white;
 }
 .MarketMain-container1{
     display: flex;
