--- a/my-app/public/style.css
+++ b/my-app/public/style.css
@@ -85,8 +85,7 @@ body{
 }
 #Navbar{
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: center;
     height: 62px;
     background-color: var(--Orange);
 
@@ -97,8 +96,25 @@ body{
 #Navbar a:hover{
     color: white;
 }
+.MainHeader-logo-href{
+    display: none;
+}
+.Navbar-href{
+    display: flex;
+    align-items: center;
+    margin: 0 50px;
+}
+.Navbar-href1{
+    height: 62px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 50px;
+}
+.NavbarMobile-burgerMenu-block{
+    display: none;
+}
 .Navbar-arrow{
-    position: absolute;
     background-color: black;
     top: 50%;
     margin-top: -1px;
@@ -188,6 +204,7 @@ body{
 .OurPropose-title{
     font-size: 30px;
     font-weight: bold;
+    text-align: center;
     margin: 30px auto 15px auto;
 }
 .OurPropose-line{
@@ -293,6 +310,26 @@ body{
     flex-direction: column;
     width: 750px;
     height: 400px;
+}
+.Footer-mobile, .Footer-mobile-nav{
+    display: none;
+}
+.Footer-logo-href{
+    display: none;
+}
+.Footer-mobile-socialmedia{
+    display: none;
+}
+
+.Footer-mobile-socialmedia-box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: solid 3px var(--Orange);
+    border-radius: 100px;
+    margin: 20px;
+    width: 60px;
+    height: 60px;
 }
 .Footer-nav-col1{
     display: flex;
@@ -835,4 +872,230 @@ body{
     text-align: center;
     font-size: 18px;
     line-height: 25px;
+}
+
+/*<________________________________________________ADAPTATION_____________________________________________________________>*/
+
+@media(max-width: 756px){
+    #MainHeader{
+        display: none;
+    }
+    #Navbar{
+        background-color: var(--black);
+    }
+    .MainHeader-block1-logo {
+        height: 33px;
+    }
+    .Navbar-href{
+        display: none;
+    }
+    .Navbar-href1{
+        display: none;
+    }
+    .MainHeader-logo-href{
+        display: flex;
+        align-items: center;
+        margin: 0 5px;
+    }
+    .Navbar-ProductsAndService{
+        display: none;
+    }
+    .NavbarMobile-burgerMenu{
+        height: 35px;
+        display: flex;
+        justify-content: center;
+        margin-top: 15px;
+    }
+    .burgerMenu-button{
+        width: 35px;
+        height: 35px;
+        background-color: var(--Orange);
+        border-radius: 50%;
+        position: relative;
+    }
+    .burgerMenu-button-span,
+    .burgerMenu-button-span::before,
+    .burgerMenu-button-span::after {
+        position: absolute;
+        top: 50%; margin-top: -1px;
+        left: 50%; margin-left: -7px;
+        width: 15px;
+        height: 2px;
+        background-color: var(--black);
+    }
+    .burgerMenu-button-span::before,
+    .burgerMenu-button-span::after{
+        content: '';
+        display: block;
+        transition: 1s;
+    }
+    .burgerMenu-button-span::before{
+        transform: translateY(-5px);
+        margin-left: -8px;
+    }
+    .burgerMenu-button-span::after{
+        transform: translateY(5px);
+        margin-left: -8px;
+    }
+    
+    .burgerMenu-button_active span{
+        transform: rotate(-90deg);
+    }
+    .burgerMenu-button_active span:before{
+        transform: rotate(35deg);
+        width: 10px;
+        transform-origin: left bottom;
+    }
+    .burgerMenu-button_active span:after{
+        transform: rotate(-35deg);
+        width: 10px;
+        transform-origin: left top;
+    
+    }
+    .NavbarMobile-burgerMenu-block{
+        display: flex;
+        flex-direction: column;
+        background-color: white;
+    
+        transition: 0.5s;
+        transition-delay: 0.5s;
+        transform-origin: top;
+    
+    
+        height: 0vh;
+        width: 10%;
+        margin-left: 145px;
+    }
+    .NavbarMobile-burgerMenu-block_active{
+        transition: 0.5s;
+        height: 100vh;
+        width: 100%;
+        transform-origin: top;
+        opacity: 1;
+
+        margin-left: 0;
+
+    }
+    
+    .NavbarMobile-burgermenu-link{
+        margin: 6px 0px;
+        color: var(--black);
+    
+        transition: 0.2s;
+        transform-origin: top;
+        transform: scaleY(0);
+        opacity: 0;
+    }
+    .NavbarMobile-burgermenu-link_active{
+        margin: 6px 0px;
+        margin-left: 15px;
+
+        color: var(--black);
+    
+        transition-delay: 0.2s;
+        transform: scaleY(1);
+        opacity: 1;
+    }
+    #Footer{
+        align-items: flex-start;
+    }
+    .Footer-nav{
+        display: none;
+    }
+    .Footer-map{
+        display: none;
+    }
+    .Footer-mobile, .Footer-mobile-nav{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+    .Footer-mobile-link{
+        color: white;
+        margin-top: 10px;
+    }
+    .Footer-logo-href{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 20px 5px;
+    }
+    .Footer-mobile-socialmedia{
+        display: flex;
+        justify-content: center;
+    }
+    .Footer-mobile-icon{
+        width: 30px;
+        height: 30px;
+    }
+    .Footer-mobile-socialmedia-box{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: solid 3px var(--Orange);
+        border-radius: 100px;
+        margin: 20px;
+        width: 60px;
+        height: 60px;
+    }
+    .Homepage-form-form {
+        width: 290px;
+        height: 290px;
+        border: 2px solid rgba(25,26,30,0.1);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .Homepage-form-input {
+        border: none;
+        border-radius: 15px;
+        background-color: rgba(25,26,30,0.1);
+        text-align: center;
+        font-size: 16px;
+        font-weight: bold;
+        color: var(--black);
+        height: 50px;
+        width: 228px;
+        margin-bottom: 25px;
+    }
+    .Homepage-form-button {
+        font-size: 16px;
+        font-weight: bold;
+        background-color: white;
+        border: 5px solid var(--Orange);
+        padding: 18px 30px;
+        border-radius: 50px;
+    }
+    .OurPropose-container {
+        flex-wrap: wrap;
+    }
+    .OurPropose-container-box {
+        width: 310px;
+        margin-right: 0px;
+    }
+    .OurPropose-container-box-desc {
+        width: 230px;
+        margin: 10px 40px;
+    }
+    .Header-headline1 {
+        font-size: 16px;
+        width: 300px;
+        margin-bottom: 10px;
+    }
+    .Header-headline2 {
+        font-size: 15px;
+        width: 300px;
+        margin-bottom: 20px;
+    }
+    #Header {
+        height: 175px;
+        background-size: 130%;
+    }
+    .Header-button {
+        display: none;
+    }
+    .Header-container {
+        height: 200px;
+    }
 }
